Fixed modal alignment issue due to flex added previously (#2975)

--- a/src/blocks/modal/style.scss
+++ b/src/blocks/modal/style.scss
@@ -89,7 +89,7 @@ body {
 	}
 }
 
-.uagb-modal-trigger {
+.uagb-modal-trigger:not(img) {
 	display: flex;
 	svg {
 		font-size: 30px;
